# maybecc

./: README.md  pyproject.toml
examples/: arena_alloc.mcc  base64_codec.mcc  bitfield.mcc  bitstream_thin.mcc  calculator.mcc  linked_list.mcc  packet_parser.mcc  ring_buffer.mcc  utf8_validator.mcc
maybecc/: __init__.py  cli.py  orchestrator.py
maybecc/codegen/: extractor.py  llm_client.py  prompt_builder.py
maybecc/parser/: __init__.py  ast_nodes.py  grammar.lark  parser.py  preprocessor.py  transformer.py
maybecc/verify/: compiler.py  fuzz_gen.py  harness_gen.py  known_functions.py  report.py  runner.py
tests/: test_parser.py
