[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maybecc"
version = "0.1.0"
description = "A non-deterministic compiler: LLM oracle + deterministic verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "lark>=1.1,<2",
    "click>=8.1,<9",
    "anthropic>=0.40",
    "rich>=13.0,<14",
]

[project.scripts]
maybecc = "maybecc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
